# investment_growth_cal

./: README.md  example_package_usage.py  example_usage.py  investment_calculator.py  investment_results.csv  pyproject.toml  test_calculator.py  test_package.py
investment_growth_calculator/: __init__.py  calculator.py  cli.py
tests/: test_calculator.py
