[tool.poetry]
name = "investment-growth-calculator"
version = "0.1.0"
description = "A Python package for calculating investment growth with compound interest and additional contributions"
authors = ["dakota-robarts <cody.robarts@yahoo.com>"]
readme = "README.md"
homepage = "https://github.com/dakota-robarts/investment-growth-calculator"
repository = "https://github.com/dakota-robarts/investment-growth-calculator"
documentation = "https://github.com/dakota-robarts/investment-growth-calculator"
keywords = ["investment", "calculator", "compound-interest", "finance", "savings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "investment_growth_calculator"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"

[tool.poetry.scripts]
investment-calculator = "investment_growth_calculator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
